--- a/0x02-i18n/templates/5-index.html
+++ b/0x02-i18n/templates/5-index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ _('home_title') }}</title>
+    <title>Welcome to Holberton</title>
 </head>
 <body>
-    <h1>{{ _('home_header') }}</h1>
+    <h1>Hello world</h1>
     {% if g.user %}
-    <p>{{ _('logged_in_as', username=g.user.get('name', '')) }}</p>
+    <p>{{ _('logged_in_as', username=g.user.get('name', '')) | safe }}</p>
     {% else %}
-    <p>{{ _('not_logged_in') }}</p>
+    <p>{{ _('not_logged_in') | safe }}</p>
     {% endif %}
 </body>
 </html>
