--- a/0x02-i18n/templates/6-index.html
+++ b/0x02-i18n/templates/6-index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ _('home_title') }}</title>
+    <title>Welcome to Holberton</title>
 </head>
 <body>
-    <h1>{{ _('home_header') }}</h1>
+    <h1>Hello World</h1>
     {% if g.user %}
     <p>{{ _('logged_in_as', username=g.user.get('name', '')) }}</p>
     {% else %}
